@@ -1,2 +1,8 @@
 
 SUBDIRS=gconf
+
+SchemasDTD_DATA = gconf-1.0.dtd
+SchemasDTDdir = $(pkgdatadir)/xml/gconf/
+
+EXTRA_DIST = \
+	$(SchemasDTD_DATA)
