@@ -1222,7 +1222,7 @@ key and their effect on the application.
 
 &lt;!ELEMENT schemalist (schema)*&gt;
 
-&lt;!ELEMENT schema  (key,applyto*,owner?,type,locale*)&gt;
+&lt;!ELEMENT schema  (key,applyto*,owner?,type,default?,locale*)&gt;
 
 &lt;!ELEMENT key     (#PCDATA)&gt;
 
@@ -1232,12 +1232,13 @@ key and their effect on the application.
 
 &lt;!ELEMENT type    (#PCDATA)&gt;
 
+&lt;!ELEMENT default (#PCDATA)&gt;
+
 &lt;!ELEMENT locale  (default?,short?,long?)&gt;
 &lt;!ATTLIST locale  name CDATA #REQUIRED&gt;
 
 &lt;!ELEMENT short   (#PCDATA)&gt;
 &lt;!ELEMENT long    (#PCDATA)&gt;
-&lt;!ELEMENT default (#PCDATA)&gt;
         </programlisting>
       </para>   
     </sect1>
