@@ -1,3 +1,14 @@
+2002-09-18  Yanko Kaneti <yaneti@declera.com>
+
+	* gconf.m4.in: Introduce --disable-schemas-install and the 
+	GCONF_SCHEMAS_INSTALL conditional, which allows disabling 
+	the schemas installation given the package decides to support it.
+
+	* doc/Makefile.am:
+	* doc/gconf/gconf.sgml:
+	* doc/gconf-1.0.dtd (ADDED): formal dtd for the schema files.
+	Not yet complete. Installed in $(pkgdatadir)/xml/gconf/ for now.
+
 2002-09-18  Havoc Pennington  <hp@pobox.com>
 
 	* configure.in: bump to 2.1.0, to get in sync with gnome and allow
